--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,15 @@
       %footer
         = render 'layouts/footer'
     / ! end of #container
-    / ! = render 'layouts/script'
+    :javascript
+      ; (function (o, l, a, r, k, y) {
+        if (o.olark) return;
+        r = "script"; y = l.createElement(r); r = l.getElementsByTagName(r)[0];
+        y.async = 1; y.src = "//" + a; r.parentNode.insertBefore(y, r);
+        y = o.olark = function () { k.s.push(arguments); k.t.push(+new Date) };
+        y.extend = function (i, j) { y("extend", i, j) };
+        y.identify = function (i) { y("identify", k.i = i) };
+        y.configure = function (i, j) { y("configure", i, j); k.c[i] = j };
+        k = y._ = { s: [], t: [+new Date], c: {}, l: a };
+      })(window, document, "static.olark.com/jsclient/loader.js");
+      olark.identify('9639-310-10-6943');
