Fixed up the inline %script line a bit, trying to get async attribute working, since Olark doesn't load without it

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
       %footer
         = render 'layouts/footer'
     / ! end of #container
-    :javascript
+    %script{:type => "text/javascript", :async => "async"}
       ; (function (o, l, a, r, k, y) {
         if (o.olark) return;
         r = "script"; y = l.createElement(r); r = l.getElementsByTagName(r)[0];
