Using :plain instead

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
         = render 'layouts/footer'
     / ! end of #container
     %script{:type => "text/javascript", :async => "async"}
-      :cdata
+      :plain
         ; (function (o, l, a, r, k, y) {
           if (o.olark) return;
           r = "script"; y = l.createElement(r); r = l.getElementsByTagName(r)[0];
